--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Weather" />
     <meta name="keyword" content="Weather" />
-    <meta name="author" content="Ahmed Saleh" />
+    <meta name="author" content="Ahmed Mohamed" />
 
     <link href='https://fonts.googleapis.com/css?family=Anton|Passion+One|PT+Sans+Caption' rel='stylesheet'
         type='text/css'>
@@ -213,7 +213,7 @@
 
                 </div>
 
-                <p class="t-color pt-lg-4 fonts-c">Copyright 2025 Company name. Designed by Ahmed Saleh. All rights
+                <p class="t-color pt-lg-4 fonts-c">Copyright 2025 Company name. Designed by Ahmed Mohamed. All rights
                     reserved</p>
 
 
